Updated tmux config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -9,6 +9,8 @@ set -gq status-utf8 on
 
 set-option -g history-limit 50000000
 
+setw -g automatic-rename off
+
 set-option -g display-time 2000
 set-option -g display-panes-time 2000
 
@@ -113,7 +115,7 @@ set-window-option -g clock-mode-colour colour109 #blue
 set-window-option -g window-status-bell-style bg=colour167,fg=colour235 # bg=red, fg=bg
 
 set-option -g status-left "\
-#[fg=grey11, bg=grey46]#{?client_prefix,#[bg=darkorange],} ❐ #S \
+#[fg=grey11, bg=grey46]#{?client_prefix,#[bg=darkorange],}   #S \
 #[fg=grey46, bg=grey11]#{?client_prefix,#[fg=darkorange],}"
 
 set-option -g status-right "\
