--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -53,7 +53,9 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: JetBrainsMono Nerd Font
+    # family: JetBrainsMono Nerd Font
+    family: Iosevka Nerd Font
+    # family: Hack Nerd Font
     # The `style` can be specified to pick a specific face.
     #style: Regular
     # Bold font face
@@ -90,7 +92,7 @@ font:
   # line height and letter spacing
   offset:
     x: 0 # letter spacing
-    y: 0 # line spacing
+    y: 1 # line spacing
 
 # If `true`, bold text is drawn using the bright color variants.
 #draw_bold_text_with_bright_colors: false
