--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -6,9 +6,10 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family    JetBrainsMono Nerd Font
+# font_family    JetBrainsMono Nerd Font
 # font_family      Iosevka Nerd Font
 # font_family      Hack Nerd Font
+font_family      CaskaydiaCove Nerd Font Mono
 
 
 bold_font        auto
@@ -28,7 +29,7 @@ bold_italic_font auto
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 12.0
+font_size 12.5
 
 #: Font size (in pts)
 
@@ -2086,25 +2087,74 @@ map opt+cmd+,    debug_config
 }}}
 
 #: Colorscheme Ayu Mirage {{{
-background #212733
-foreground #d9d7ce
-cursor #ffcc66
-selection_background #343f4c
-color0 #191e2a
-color8 #686868
-color1 #ed8274
-color9 #f28779
-color2  #a6cc70
-color10 #bae67e
-color3  #fad07b
-color11 #ffd580
-color4  #6dcbfa
-color12 #73d0ff
-color5  #cfbafa
-color13 #d4bfff
-color6  #90e1c6
-color14 #95e6cb
-color7  #c7c7c7
-color15 #ffffff
-selection_foreground #212733
+# background #212733
+# foreground #d9d7ce
+# cursor #ffcc66
+# selection_background #343f4c
+# color0 #191e2a
+# color8 #686868
+# color1 #ed8274
+# color9 #f28779
+# color2  #a6cc70
+# color10 #bae67e
+# color3  #fad07b
+# color11 #ffd580
+# color4  #6dcbfa
+# color12 #73d0ff
+# color5  #cfbafa
+# color13 #d4bfff
+# color6  #90e1c6
+# color14 #95e6cb
+# color7  #c7c7c7
+# color15 #ffffff
+# selection_foreground #212733
 }}}
+
+# Colorscheme Kanagawa {{{
+# vim:ft=kitty
+
+## name: Kanagawa
+## license: MIT
+## author: Tommaso Laurenzi
+## upstream: https://github.com/rebelot/kanagawa.nvim/
+
+
+background #1F1F28
+foreground #DCD7BA
+selection_background #2D4F67
+selection_foreground #C8C093
+url_color #72A7BC
+cursor #C8C093
+
+# Tabs
+active_tab_background #2D4F67
+active_tab_foreground #DCD7BA
+inactive_tab_background #223249
+inactive_tab_foreground #727169
+#tab_bar_background #15161E
+
+# normal
+color0 #090618
+color1 #C34043
+color2 #76946A
+color3 #C0A36E
+color4 #7E9CD8
+color5 #957FB8
+color6 #6A9589
+color7 #C8C093
+
+# bright
+color8  #727169
+color9  #E82424
+color10 #98BB6C
+color11 #E6C384
+color12 #7FB4CA
+color13 #938AA9
+color14 #7AA89F
+color15 #DCD7BA
+
+
+# extended colors
+color16 #FFA066
+color17 #FF5D62
+# }}}
