--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -9,7 +9,7 @@
 # font_family    JetBrainsMono Nerd Font
 # font_family      Iosevka Nerd Font
 # font_family      Hack Nerd Font
-font_family      CaskaydiaCove Nerd Font Mono
+font_family      CaskaydiaCove Nerd Font #Mono
 
 
 bold_font        auto
@@ -118,7 +118,7 @@ disable_ligatures never
 #: implemented using the calt OpenType feature. For disabling general
 #: ligatures, use the font_features setting.
 
-font_features
+font_features CaskaydiaCoveNerdFontComplete- +zero +onum
 
 #: E.g. font_features none
 
@@ -2058,6 +2058,13 @@ map opt+cmd+,    debug_config
 #::      map ctrl+alt+a send_text normal Word\x1b[H
 #::      map ctrl+alt+a send_text application Word\x1bOH
 
+# jump to beginning and end of word
+map alt+left send_text all \x1b\x62
+map alt+right send_text all \x1b\x66
+
+# jump to beginning and end of line
+map cmd+left send_text all \x01
+map cmd+right send_text all \x05
 #: }}}
 
 #: }}}
