--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -154,7 +154,7 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 
 # Restore tmux environment after system restart.
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @resurrect-strategy-nvim 'session' # save nvim session
+# set -g @resurrect-strategy-nvim 'session' # save nvim session
 set -g @resurrect-capture-pane-contents 'on' # save tmux panes
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
