--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -29,7 +29,7 @@ bold_italic_font auto
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 12.5
+font_size 12
 
 #: Font size (in pts)
 
@@ -695,7 +695,7 @@ single_window_margin_width -1
 #: values set top, horizontal and bottom. Four values set top, right,
 #: bottom and left.
 
-window_padding_width 0
+window_padding_width 6.0 3.0
 
 #: The window padding (in pts) (blank area between the text and the
 #: window border). A single value sets all four sides. Two values set
@@ -1323,7 +1323,7 @@ macos_window_resizable yes
 #: resizable on macOS. Changing this setting by reloading the config
 #: will only affect newly created windows.
 
-macos_thicken_font 0
+macos_thicken_font 0.2
 
 #: Draw an extra border around the font with the given width, to
 #: increase legibility at small font sizes. For example, a value of
