--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -21,7 +21,7 @@ window:
   # Values for `decorations` (macOS only):
   #     - transparent: Title bar, transparent background and title bar buttons
   #     - buttonless: Title bar, transparent background and no title bar buttons
-  decorations: full
+  decorations: buttonless
 
   startup_mode: Windowed
   # Window title
@@ -54,7 +54,8 @@ font:
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
     # family: JetBrainsMono Nerd Font
-    family: Iosevka Nerd Font
+    # family: Iosevka Nerd Font
+    family: CaskaydiaCove Nerd Font #Mono
     # family: Hack Nerd Font
     # The `style` can be specified to pick a specific face.
     #style: Regular
@@ -87,12 +88,12 @@ font:
     #style: Bold Italic
 
   # Point size
-  size: 13
+  size: 12
 
   # line height and letter spacing
   offset:
     x: 0 # letter spacing
-    y: 1 # line spacing
+    y: 2 # line spacing
 
 # If `true`, bold text is drawn using the bright color variants.
 #draw_bold_text_with_bright_colors: false
@@ -100,30 +101,37 @@ font:
 colors:
   # Default colors
   primary:
-    background: '#282a36'
-    foreground: '#f8f8f2'
+    background: '0x1f1f28'
+    foreground: '0xdcd7ba'
 
   # Normal colors
   normal:
-    black: '#000000'
-    red: '#ff5555'
-    green: '#50fa7b'
-    yellow: '#f1fa8c'
-    blue: '#caa9fa'
-    magenta: '#ff79c6'
-    cyan: '#8be9fd'
-    white: '#bfbfbf'
+    black: '0x090618'
+    red: '0xc34043'
+    green: '0x76946a'
+    yellow: '0xc0a36e'
+    blue: '0x7e9cd8'
+    magenta: '0x957fb8'
+    cyan: '0x6a9589'
+    white: '0xc8c093'
 
   # Bright colors
   bright:
-    black: '#575b70'
-    red: '#ff6e67'
-    green: '#5af78e'
-    yellow: '#f4f99d'
-    blue: '#caa9fa'
-    magenta: '#ff92d0'
-    cyan: '#9aedfe'
-    white: '#e6e6e6'
+    black: '0x727169'
+    red: '0xe82424'
+    green: '0x98bb6c'
+    yellow: '0xe6c384'
+    blue: '0x7fb4ca'
+    magenta: '0x938aa9'
+    cyan: '0x7aa89f'
+    white: '0xdcd7ba'
+  selection:
+    background: '0x2d4f67'
+    foreground: '0xc8c093'
+
+  indexed_colors:
+    - { index: 16, color: '0xffa066' }
+    - { index: 17, color: '0xff5d62' }
 # Bindings are always filled by default, but will be replaced when a new
 # binding with the same triggers is defined. To unset a default binding, it can
 # be mapped to the `ReceiveChar` action. Alternatively, you can use `None` for
@@ -270,4 +278,4 @@ key_bindings:
   # Print all received window events.
   #print_events: false
 # To change color theme run npx alacritty-themes and choose a theme from the list
-theme: Dracula
+theme: Kanagawa
